k8s/apps/money-order/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-order
  namespace: money-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-order
  template:
    metadata:
      labels:
        app: money-order
    spec:
      containers:
        - name: money-order
          image: registry.aashutoshparajuli.com.np/money-order/backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 15
        - name: money-order-worker
          image: registry.aashutoshparajuli.com.np/money-order/backend
          imagePullPolicy: Always
          command: ["node", "dist/modules/temporal/worker/worker.js"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
